Worked on mobile viewport issues

--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-* {
+body {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 28px;
 }
 
 @media (min-width: 992px) {
-    * {
+    body {
         font-size: 20px;
     }
     h4 {
-        font-size: 22px;
+        font-size: 30px;
     }
 }
 
@@ -59,24 +59,20 @@ h4 {
     }
 }
 
-.projects-thumbnail {
-    border-radius: 20px;
-}
-
 @media (min-width: 992px) {
-    
-    .projects-title a {
+    .projects-link {
         text-decoration: none;
     }
 
-    .projects-title a :hover {
-        color: orangered !important;
+    .projects-link:hover {
+        color: orangered;
         text-decoration: underline orangered;
     }
 }
 
-.projects-title a {
-        text-decoration: underline black;
+.projects-link {
+    color: black;
+    text-decoration: underline black;
 }
     
 .contact-info li a {
@@ -84,7 +80,7 @@ h4 {
     text-decoration: none;
 }
 
-.contact-info li :hover {
+.contact-info li a:hover {
     text-decoration: underline orangered;
     color: orangered;
 }
@@ -102,7 +98,7 @@ h4 {
 
 @media (max-width: 992px) {
     .skills {
-        overflow-x: scroll;
+        overflow-x: auto;
     }
 }
 
@@ -113,3 +109,4 @@ section {
 #skills {
     scroll-margin-top: 50px;
 }
+
